--- a/Stock_ss_predictor/requirements.txt
+++ b/Stock_ss_predictor/requirements.txt
@@ -9,4 +9,31 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 ta==0.10.2
 matplotlib==3.7.3
-seaborn==0.12.2 
+seaborn==0.12.2
+opencv-python-headless==4.8.1.78
+tensorflow==2.12.0
+keras==2.12.0
+nltk==3.8.1
+pandas-ta==0.3.14b0
+statsmodels==0.14.0
+scipy==1.10.1
+pillow==9.5.0
+streamlit-option-menu==0.3.2
+streamlit-lottie==0.0.5
+nsepy==0.8
+datetime
+json
+bs4==4.12.2
+vaderSentiment==3.3.2
+newspaper3k==0.2.8
+textblob==0.17.1
+tweepy==4.14.0
+alpha_vantage==2.3.1
+finnhub-python==2.4.18
+yahoo-fin==0.8.9.1
+pandas_datareader==0.10.0
+streamlit-extras==0.3.6
+streamlit-authenticator==0.2.3
+extra-streamlit-components==0.1.60
+hydralit==1.0.14
+hydralit-components==1.0.10 
