--- a/Stock_ss_predictor/requirements.txt
+++ b/Stock_ss_predictor/requirements.txt
@@ -11,8 +11,8 @@ ta==0.10.2
 matplotlib==3.7.3
 seaborn==0.12.2
 opencv-python-headless==4.8.1.78
-tensorflow==2.12.0
-keras==2.12.0
+tensorflow-cpu==2.10.0
+keras==2.10.0
 nltk==3.8.1
 pandas-ta==0.3.14b0
 statsmodels==0.14.0
