--- a/Stock_ss_predictor/config.toml
+++ b/Stock_ss_predictor/config.toml
@@ -1,12 +1,6 @@
-[theme]
-primaryColor = "#FF4B4B"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F0F2F6"
-textColor = "#262730"
-
 [server]
-maxUploadSize = 200
-enableXsrfProtection = true
+enableCORS = false
+enableXsrfProtection = false
 
 [browser]
-gatherUsageStats = false 
+gatherUsageStats = false
