--- a/Stock_ss_predictor/requirements.txt
+++ b/Stock_ss_predictor/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.32.0
 pandas==2.0.3
 numpy==1.24.3
-tensorflow-cpu==2.10.0
+tensorflow==2.9.1
 python-dotenv==1.0.0
 yfinance==0.2.36
 plotly==5.17.0
@@ -15,3 +15,4 @@ streamlit-option-menu==0.3.2
 pandas-ta==0.3.14b0
 setuptools==65.5.1
 opencv-python-headless==4.8.1.78
+wheel>=0.38.0
