--- a/Stock_ss_predictor/requirements.txt
+++ b/Stock_ss_predictor/requirements.txt
@@ -17,3 +17,6 @@ vaderSentiment==3.3.2
 streamlit-option-menu==0.3.2
 pandas-ta==0.3.14b0
 opencv-python-headless==4.8.1.78
+textblob==0.17.1
+scipy>=1.9.0
+requests>=2.28.0
