--- a/Stock_ss_predictor/config.toml
+++ b/Stock_ss_predictor/config.toml
@@ -1,6 +1,14 @@
+
+
+[theme]
+primaryColor = "#FF4B4B"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+
 [server]
-enableCORS = false
-enableXsrfProtection = false
+maxUploadSize = 200
+enableXsrfProtection = true
 
 [browser]
-gatherUsageStats = false
+gatherUsageStats = false 
